kinda loading but super damn slow

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body class="docs-app-background">
-  <material-docs-app></material-docs-app>
+  <wgt-frontend-app></wgt-frontend-app>
   <script>
   // Note this is a customised version of the GA tracking snippet
   // See the comments below for more info
